2011-03-08  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        [GTK] close-web-view emitted on disposed WebView
        https://bugs.webkit.org/show_bug.cgi?id=55932

        * WebCoreSupport/ChromeClientGtk.cpp:
        (ChromeClient::chromeDestroyed): Remove the closeSoonTimer glib
        source before destruction of the ChromeClient.

Canonical link: https://commits.webkit.org/70722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80836 268f45cc-cd09-0410-ab3c-d52691b4dbfc